--- a/Example.iOS/Example.iOS.csproj
+++ b/Example.iOS/Example.iOS.csproj
@@ -150,6 +150,9 @@
   </ItemGroup>
   <ItemGroup>
     
+    <PackageReference Include="Xamarin.Forms">
+      <Version>2.5.1.527436</Version>
+    </PackageReference>
     <PackageReference Include="JWT">
       <Version>4.0.0</Version>
     </PackageReference>
