--- a/Example.Android/Example.Android.csproj
+++ b/Example.Android/Example.Android.csproj
@@ -58,24 +58,6 @@
     <PackageReference Include="JWT">
       <Version>4.0.0</Version>
     </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Core">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Core.Platform.Android">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth.Platform.Android">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Security">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Security.Platform.Android">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
     <PackageReference Include="System.Json">
       <Version>4.5.0</Version>
     </PackageReference>
@@ -84,6 +66,24 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.1.527436</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Core">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Core.Platform.Android">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Security">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Security.Platform.Android">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Auth.Platform.Android">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Auth">
+      <Version>1.0.0-alpha-1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
