--- a/Example.iOS/Example.iOS.csproj
+++ b/Example.iOS/Example.iOS.csproj
@@ -140,24 +140,6 @@
     <PackageReference Include="JWT">
       <Version>4.0.0</Version>
     </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Security.Platform.iOS">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Security">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth.Platform.iOS">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Core">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Core.Platform.iOS">
-      <Version>1.0.0-alpha</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
       <Version>2.4.3.840</Version>
     </PackageReference>
@@ -166,6 +148,24 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.1.527436</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Auth">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Auth.Platform.iOS">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Core">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Core.Platform.iOS">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Security">
+      <Version>1.0.0-alpha-1</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Security.Platform.iOS">
+      <Version>1.0.0-alpha-1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
