--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -10,14 +10,13 @@
     <PackageReference Include="ListDiff" Version="1.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Xam.Plugin.HtmlLabel" Version="2.2.0" />
-    <PackageReference Include="AeroGear.Mobile.Core" Version="1.0.0-alpha" />
-    <PackageReference Include="AeroGear.Mobile.Auth" Version="1.0.0-alpha" />
-    <PackageReference Include="AeroGear.Mobile.Security" Version="1.0.0-alpha" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.3.840" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.3.840" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.3.840" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.1.527436" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="2.0.2" />
+    <PackageReference Include="AeroGear.Mobile.Auth" Version="1.0.0-alpha-1" />
+    <PackageReference Include="AeroGear.Mobile.Security" Version="1.0.0-alpha-1" />
   </ItemGroup>
 
   <ItemGroup>
