--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -100,6 +100,7 @@
     <Folder Include="Auth\" />
     <Folder Include="Security\" />
     <Folder Include="ViewModels\Security\" />
+    <Folder Include="Models\Constraints\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Resources\aerogear_logo.svg" />
