--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -25,17 +25,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>StringResources.resx</DependentUpon>
     </Compile>
-    <Compile Update="Views\Pages\WebPage.xaml.cs">
-      <DependentUpon>WebPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Update="Views\Pages\UnderConstruction.xaml.cs">
-      <DependentUpon>UnderConstruction.xaml</DependentUpon>
+    <Compile Update="Views\Pages\LandingPage.xaml.cs">
+      <DependentUpon>LandingPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\RootPageMenuItem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="Views\Pages\HomePage.xaml.cs">
-      <DependentUpon>HomePage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="Views\DrawerMenuPage.cs">
