--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,9 @@ ASALocalRun/
 # Backup files
 *.bak
 .DS_Store
+
+# Xamarin.Android Resource.Designer.cs files
+**/*.Android/**/[Rr]esource.[Dd]esigner.cs
+**/*.Droid/**/[Rr]esource.[Dd]esigner.cs
+**/Android/**/[Rr]esource.[Dd]esigner.cs
+**/Droid/**/[Rr]esource.[Dd]esigner.cs
