--- a/Example.iOS/Example.iOS.csproj
+++ b/Example.iOS/Example.iOS.csproj
@@ -144,23 +144,23 @@
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.1.527436</Version>
     </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Auth">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="AeroGear.Mobile.Auth.Platform.iOS">
-      <Version>1.0.0-alpha-3</Version>
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="AeroGear.Mobile.Core">
-      <Version>1.0.0-alpha-3</Version>
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="AeroGear.Mobile.Core.Platform.iOS">
-      <Version>1.0.0-alpha-3</Version>
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="AeroGear.Mobile.Security">
-      <Version>1.0.0-alpha-3</Version>
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="AeroGear.Mobile.Security.Platform.iOS">
-      <Version>1.0.0-alpha-3</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth">
-      <Version>1.0.0-alpha-3</Version>
+      <Version>1.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
