--- a/Example.Android/Example.Android.csproj
+++ b/Example.Android/Example.Android.csproj
@@ -65,10 +65,7 @@
       <Version>2.4.3.840</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>2.5.1.527436</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth">
-      <Version>1.0.0</Version>
+      <Version>3.1.0.583944</Version>
     </PackageReference>
     <PackageReference Include="AeroGear.Mobile.Core">
       <Version>1.0.0</Version>
@@ -118,6 +115,7 @@
     <AndroidResource Include="Resources\drawable\ic_passed.png" />
     <AndroidResource Include="Resources\drawable\ic_warning.png" />
     <AndroidResource Include="Resources\drawable\ic_refresh.png" />
+    <AndroidResource Include="Resources\xml\network_security_config.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
