--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.583944" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.3.840" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
+    <PackageReference Include="AeroGear.Mobile.Auth" Version="1.1.0-alpha.2" />
+    <PackageReference Include="AeroGear.Mobile.Security" Version="1.1.0-alpha.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -116,9 +118,5 @@
     <None Remove="Resources\person.svg" />
     <None Remove="Resources\ic_done.svg" />
     <None Remove="Resources\ic_close.svg" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Auth\Auth\Auth.csproj" />
-    <ProjectReference Include="..\..\Security\Security\Security.csproj" />
   </ItemGroup>
 </Project>
